# super-ecma

./: .gitignore  CMakeLists.txt  README.md  checklist.md  detailed-plan.md  instructions.md  lang.md  plan.md  run.sh  test.sh  testprogram.ses
docs/plan/tasks/: task_001_project_setup.md  task_002_define_token_types.md  task_003_basic_token_structure.md  task_004_lexer_core_eof.md  task_005_lexer_whitespace_skipping.md  task_006_lexer_keyword_recognition.md  task_007_lexer_identifier_recognition.md  task_008_lexer_integer_literal_recognition.md  task_009_lexer_basic_operators.md  task_010_lexer_more_operators.md  task_011_lexer_delimiters.md  task_012_refactor_lexer.md  task_013_base_ast_node.md  task_014_ast_literal_nodes.md  task_015_ast_identifier_node.md  task_017_parser_core_setup.md
src/: CMakeLists.txt  main.cpp
src/compiler/ast/: expression.h  node.h  program.h  statement.h
src/compiler/lexer/: lexer.cpp  lexer.h  token.h  token_types.h
src/compiler/parser/: parser.cpp  parser.h
tests/: CMakeLists.txt  main.cpp  test_runner.cpp  test_runner.h  test_runner_test.cpp
tests/compiler/ast/: expression_test.cpp  node_test.cpp  statement_test.cpp
tests/compiler/lexer/: lexer_test.cpp  token_test.cpp  token_types_test.cpp
tests/compiler/parser/: parser_test.cpp
